# cmake_tests

./: .travis.yml  CMakeLists.txt  README.md  fractalConfig.cmake.in  user_app.cpp
include/fractal/: fractal.h
installer/: CMakeLists.txt
src/: fractal.cpp  fractal.def
test/: CMakeLists.txt  test.cpp
tools/: CMakeLists.txt  fractal-ui.cpp
